# slidr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
.agents/skills/slidr-theme-creator/: SKILL.md
.agents/skills/slidr-theme-creator/references/: html-structure.md  theme-examples.md
.github/workflows/: ci.yaml  release.yml
deck/: custom-theme.css  deck.md  index.html  sherlock-theme.css
src/slidr/: build.py  cli.py  logging_utils.py  main.py  new.py  serve.py  themes.py  utils.py
src/slidr/assets/: academic.css  code-focused.css  corporate-brand.css  dark-professional.css  default.css  gradient.css  high-contrast.css  minimal-light.css  retro.css
src/slidr/templates/: slides.html
tests/: conftest.py  test_build.py  test_cli.py  test_logging_utils.py  test_main_entrypoint.py  test_new.py  test_serve.py  test_themes.py
